fix: make the mail app mail list 400px wide at least, the default is way too narrow and looks awful

--- a/nextcloud/var/www/html/themes/docker-cloud/core/css/server.css
+++ b/nextcloud/var/www/html/themes/docker-cloud/core/css/server.css
@@ -88,3 +88,8 @@ input#files_size {
 div#app-dashboard > h2 {
   color: var(--color-main-text) !important;
 }
+
+/* mail app */
+div.splitpanes__pane:nth-child(1) {
+  min-width: 400px !important;
+}
